2001-01-30  Alan Modra  <alan@linuxcare.com.au>

	* elf64-hppa.c (elf64_hppa_elf_get_symbol_type): New function.
	(elf_backend_get_symbol_type): Define.

2001-01-30  Curtis L. Janssen  <cljanss@ca.sandia.gov>

	* elf64-alpha.c (elf64_alpha_find_nearest_line): Query dwarf2
	before mdebug.

2001-01-26  Richard Henderson  <rth@redhat.com>

	* elfxx-ia64.c (elfNN_ia64_dynamic_symbol_p): Return false
	for non-default visibility.
	* elf64-alpha.c (alpha_elf_dynamic_symbol_p): Likewise, but
	delete ugly macro and replace with pretty function.

2001-01-25  Mark Elbrecht  <snowball3@bigfoot.com>

	* coff-go32.c: Update copyright.
	* coff-stgo32.c: Likewise.
	* coff-go32.c (COFF_LONG_FILENAMES): Define.
	* coff-stgo32.c (COFF_LONG_FILENAMES): Likewise.
	* coff-go32.c (COFF_SECTION_ALIGNMENT_ENTRIES): Remove .bss entry.
	* coff-stgo32.c (COFF_SECTION_ALIGNMENT_ENTRIES): Likewise.

2001-01-25  Kazu Hirata  <kazu@hxi.com>

	* bfd-in2.h: Rebuild.
	* libbfd.h: Likewise.

2001-01-23  H.J. Lu  <hjl@gnu.org>

	* bfd-in2.h: Rebuild.

2001-01-23  H.J. Lu  <hjl@gnu.org>

	* vms-misc.c (_bfd_vms_next_record): Return -1 if PRIV(vms_buf)
	is NULL or PRIV(vms_rec) is outside of the buffer.

2001-01-23  Kazu Hirata  <kazu@hxi.com>

	* coff64-rs6000.c: Fix formatting.
	* coff-arm.c: Likewise.
	* coffgen.c: Likewise.
	* cofflink.c: Likewise.
	* coff-mcore.c: Likewise.
	* coff-mips.c: Likewise.
	* coff-pmac.c: Likewise.
	* coff-ppc.c: Likewise.
	* coff-rs6000.c: Likewise.
	* elf32.c: Likewise.
	* elf32-fr30.c: Likewise.
	* elf32-i370.c: Likewise.
	* elf32-i860.c: Likewise.
	* elf32-m32r.c: Likewise.
	* elf32-m68k.c: Likewise.
	* elf32-mcore.c: Likewise.
	* elf32-ppc.c: Likewise.
	* elf32-sh.c: Likewise.
	* elf32-v850.c: Likewise.
	* elf64-alpha.c: Likewise.
	* elf64-sparc.c: Likewise.
	* elflink.c: Likewise.
	* elflink.h: Likewise.
	* elf-m10200.c: Likewise.
	* elf-m10300.c: Likewise.
	* elfxx-ia64.c: Likewise.

	* aoutx.h: Fix formatting.
	* bfd.c: Likewise.
	* bfd-in2.h: Likewise.